# rust-campaign-message-consumer

./: .env  .env.example  Cargo.toml  README.md
src/: config.rs  error.rs  logger.rs  main.rs
src/db/: mongodb.rs  postgres.rs
src/models/: message.rs
src/rabbitmq/: consumer.rs
src/repositories/: campaign_repository.rs  message_repository.rs  mod.rs
