[package]
name = "rust-campaign-messages-consumer"
version = "0.1.0"
edition = "2024"
authors = ["gabrigabs"]
description = "A RabbitMQ consumer for campaign messages"

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7.10"
cuid2 = "0.1.4"
chrono = "0.4.40"
